[bdist_wheel]
universal = 1

[flake8]
ignore =
    E126,E128,
    E201,E202,E203,E221,E222,E225,E226,E231,E241,E251,E261,E262,E266,E271,E272,
    E301,E302,E303,E305,
    E501,
    E701,E702,E704,E722,E731,
    F401,F403,F405,
    W504

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = xlrd
multi_line_output = 5
not_skip = __init__.py
skip = .tox

[metadata]
license_file = LICENSE
